# atlas-portal

./: .cursorrules  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  instrumentation-client.ts  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  sentry.edge.config.ts  sentry.server.config.ts  test-formatting.ts  trigger.config.ts  tsconfig.json  vercel.json  vitest.config.ts  vitest.setup.ts  weekly-work-log.md
.cursor/: mcp.json
.debug-data/: .gitignore  blue.json  missing_child_ids_by_master_status.json
.github/: copilot-instructions.md
.husky/: pre-commit
app/: global-error.tsx  globals.css  hero-ui-provider.tsx  layout.tsx  markdown.css  page.tsx
docs/: ACTION_PLAN_DATABASE_TRACKING_IN_ATLAS_DIFF.md  ACTION_PLAN_FIX_AGENT_DUPLICATE_DETECTION.md  ACTION_PLAN_FOR_DATA_PIPELINE_DOCS.md  ATLAS_DATA_PIPELINE.md  ATLAS_DIFFING.md  ATLAS_DOCUMENT_NUMBERING_RULES.md  ATLAS_EXTRA_FIELDS.md  ATLAS_MARKDOWN_IMPORT_EXPORT.md  ATLAS_MARKDOWN_SYNTAX.md  ATLAS_RENAMING_PLAN.md  ATLAS_TREE_STRUCTURES.md  BLUE_JSON_DISCREPANCY_PLAN.md  CREATE_EDIT_DATABASE.md  EDIT_PAGE_GENERATION_USAGE.md  LAZY_LOADING_AGENTS.md  MARKDOWN_GENERATOR.md  MARKDOWN_GENERATOR_EXAMPLES.md  MARKDOWN_TO_NOTION_SYNC.md  MARKDOWN_TO_NOTION_SYNC_ACTION_PLAN.md  NEEDED_RESEARCH.md  (+10 more)
scripts/renderer/: generate.py  pyproject.toml
scripts/renderer/atlas_preview/: __init__.py  compose.py  compose_at_ref.py  diff.py  parser.py  renderer.py  walk_content_tree.py
(+625 files in other folders)
